HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the ReturnTypeMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-3161", "Return-Type-Err")
